Fix build, fix iPhone CSS border for TV and big screens, fix input on mobile to not scale

--- a/src/components/Device.scss
+++ b/src/components/Device.scss
@@ -197,7 +197,7 @@
   }
 }
 
-@media screen and (min-width: 900px) and (max-width: 1472px) {
+@media screen and (min-width: 900px) {
   .phone {
     border-radius: 2vw;
   }
