--- a/src/grid.scss
+++ b/src/grid.scss
@@ -8,11 +8,11 @@
       .view-small {
         margin-bottom: 35px;
         padding: 0; } }
-    @media screen and (min-width: 900px) and (max-width: 1471.7272727273px) {
+    @media screen and (min-width: 900px) and (max-width: 1472px) {
       .view-small {
-        margin-bottom: 2.3765432099vw;
-        padding: 0 2.3765432099vw; } }
-    @media screen and (min-width: 1472.7272727273px) {
+        margin-bottom: 2vw;
+        padding: 0 2vw; } }
+    @media screen  {
       .view-small {
         margin-bottom: 35px;
         padding: 0 35px; } }
